# QBO-Finance-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qbagent/: __init__.py  cli.py  config.py
src/qbagent/db/: backend.py  duckdb_backend.py  factory.py  postgres_backend.py  schema.sql  sqlite_backend.py
src/qbagent/llm/: provider.py
src/qbagent/sync/: mcp_client.py  sync_runner.py
src/qbagent/sync/mappers/: __init__.py  _qbo.py  accounts.py  bills.py  expenses.py  invoices.py  transactions.py
tests/: conftest.py  test_backends.py  test_cli.py  test_config.py  test_llm_provider.py  test_mappers.py  test_schema.py  test_sync_runner.py
tests/fixtures/mcp_responses/: account_income.json  bill_open.json  invoice_paid.json  invoice_partially_paid.json  invoice_voided.json  purchase_credit_card.json  transaction_row.json
