[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbagent"
version = "0.1.0"
description = "Natural-language QuickBooks Online agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "qbagent contributors" }]
keywords = ["quickbooks", "qbo", "llm", "agent", "finance", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "tenacity>=8.3",
    "litellm>=1.40",
    "sqlglot>=23.0",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "mcp>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
server = ["fastapi>=0.111", "uvicorn>=0.30"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "types-python-dateutil>=2.9",
]

[project.scripts]
qbagent = "qbagent.cli:app"

[project.urls]
Homepage = "https://github.com/qbagent/qbagent"
Issues = "https://github.com/qbagent/qbagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qbagent"]

[tool.hatch.build.targets.sdist]
include = ["src/qbagent", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle + pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "SIM",            # simplify
    "RUF",            # ruff-specific
    "N",              # pep8-naming
    "ASYNC",          # async antipatterns
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N806"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["litellm.*", "mcp.*", "duckdb.*", "aiosqlite.*", "asyncpg.*", "sqlglot.*", "langgraph.*", "langchain_core.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits external services (QBO sandbox, real LLM)",
    "slow: takes more than a second",
]

[tool.coverage.run]
source = ["src/qbagent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
